--- a/styles/style.css
+++ b/styles/style.css
@@ -240,4 +240,274 @@ button {
   opacity: 1;
   pointer-events: all;
 }
+
+.library-container {
+  background: linear-gradient(109.37deg, #434343 3.21%, #212121 95.6%);
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  pointer-events: all;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+  opacity: 1;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.library-container.hidden {
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  opacity: 0;
+}
+
+.save-container {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.4);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  opacity: 0;
+  display: none;
+  -webkit-transition: all .8s ease-in-out;
+  transition: all .8s ease-in-out;
+}
+
+.save-container .save-popup {
+  background-color: #fff;
+  padding: 3rem 5rem;
+  border-radius: 15px;
+  width: 35%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  opacity: 1;
+  -webkit-transition: all .8s ease-in-out;
+  transition: all .8s ease-in-out;
+  -webkit-transform: translateY(-700px);
+          transform: translateY(-700px);
+}
+
+.save-container .save-popup h4 {
+  text-align: center;
+  font-size: 1.5rem;
+  color: #02203C;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.save-container .save-popup input {
+  margin: 1rem 0;
+  width: 75%;
+  font-size: inherit;
+  padding: .5rem 1rem;
+}
+
+.save-container .save-popup button:first-child {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: .5rem;
+  cursor: pointer;
+  border-top-right-radius: 14px;
+  border-bottom-left-radius: 14px;
+}
+
+.save-container .save-popup button:last-child {
+  cursor: pointer;
+  padding: .9rem 1.5rem;
+  pointer-events: all;
+  border-radius: 15px;
+  background-color: #02203C;
+  color: #fff;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+.save-container .save-popup button:last-child:hover {
+  background-color: #037FFF;
+}
+
+.save-container .save-popup.active {
+  opacity: 1;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+  -webkit-animation: slideIn .5s ease-in-out;
+          animation: slideIn .5s ease-in-out;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes slideIn {
+  0% {
+    -webkit-transform: translateY(-700px);
+            transform: translateY(-700px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@keyframes slideIn {
+  0% {
+    -webkit-transform: translateY(-700px);
+            transform: translateY(-700px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+.save-container.active {
+  opacity: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transition: all .8s ease-in-out;
+  transition: all .8s ease-in-out;
+}
+
+.pallets-con {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem 3rem;
+  overflow: auto;
+  height: calc(732px + 2rem);
+  padding: 3rem 15rem;
+}
+
+.pallets-con::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+.pallets-con::-webkit-scrollbar-track {
+  background: #333;
+}
+
+.pallets-con::-webkit-scrollbar-thumb {
+  background: #F2994A;
+  border-radius: 10px;
+}
+
+.pallets-con .pallete-item {
+  width: 100%;
+  height: 300px;
+  background-color: #fff;
+  border-radius: 15px;
+  -webkit-box-shadow: 3px 10px 20px rgba(0, 0, 0, 0.2);
+          box-shadow: 3px 10px 20px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+  pointer-events: all;
+}
+
+.pallets-con .pallete-item:hover {
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
+  background-color: #F2994A;
+  color: #fff;
+  -webkit-box-shadow: 3px 15px 20px rgba(0, 0, 0, 0.5);
+          box-shadow: 3px 15px 20px rgba(0, 0, 0, 0.5);
+}
+
+.pallets-con .pallete-item .pallete-content {
+  padding: 0.5rem 0.7rem;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.pallets-con .pallete-item .pallete-content .preview {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+.pallets-con .pallete-item .pallete-content .preview span {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  height: 100%;
+}
+
+.pallets-con .pallete-item .pallete-content .preview span:first-child {
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+}
+
+.pallets-con .pallete-item .pallete-content .preview span:last-child {
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.pallets-con .pallete-item .pallete-content h4 {
+  font-size: 17px;
+  padding: .2rem 0;
+  font-weight: 600;
+  pointer-events: none;
+}
+
+.library-popup {
+  position: relative;
+  padding: 4rem;
+  background: #000;
+  border-bottom: 4px solid #fff;
+}
+
+.library-popup h4 {
+  font-size: 3rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+  color: #FFF;
+}
+
+.library-popup .close-library {
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: .5rem;
+  cursor: pointer;
+  border-top-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+}
 /*# sourceMappingURL=style.css.map */
