--- a/styles/style.scss
+++ b/styles/style.scss
@@ -284,6 +284,16 @@ button{
     overflow: auto;
     height: calc(732px + 2rem);
     padding: 3rem 15rem;
+    @media screen and (max-width: 1665px){
+        padding:3rem 8rem;
+    }
+    @media screen and (max-width: 1665px){
+        padding:3rem 3rem;
+    }
+    @media screen and (max-width: 670px){
+        grid-template-columns: repeat(1, 1fr);
+    }
+
     &::-webkit-scrollbar{
         width: 0.5rem;
     }
@@ -296,7 +306,7 @@ button{
     }
     .pallete-item{
         width: 100%;
-        height: 300px;
+        height: 320px;
         background-color: #fff;
         border-radius: 15px;
         box-shadow: 3px 10px 20px rgba(0,0,0,0.2);
@@ -308,12 +318,18 @@ button{
             background-color: #F2994A;
             color: #fff;
             box-shadow: 3px 15px 20px rgba(0,0,0,0.5);
+            transition: all .4s ease-in-out;
+            i{
+                transition: all .4s ease-in-out;
+                color: #fff !important;
+            }
         }
         .pallete-content{
             padding: 0.5rem 0.7rem;
             height: 100%;
             display: flex;
             flex-direction: column;
+            pointer-events: none;
             .preview{
                 display: flex;
                 width: 100%;
@@ -333,10 +349,16 @@ button{
                 }
             }
             h4{
-                font-size: 17px;
-                padding: .2rem 0;
+                font-size: 21px;
+                padding: .4rem 0;
                 font-weight: 600;
                 pointer-events: none;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                i{
+                    color: #F32013;
+                }
             }
         }
     }
@@ -346,7 +368,8 @@ button{
     position: relative;
     padding: 4rem;
     background: #000;
-    border-bottom: 4px solid #fff;
+    border-bottom: 15px solid #fff;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.3);
     h4{
         font-size: 3rem;
         font-weight: 700;
@@ -363,5 +386,41 @@ button{
         cursor: pointer;
         border-top-right-radius: 15px;
         border-bottom-left-radius: 15px;
+    }
+}
+
+
+.clear-pallete{
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 1rem 2rem;
+    cursor: pointer;
+    border-bottom-left-radius: 15px;
+    background-color: #F32013;
+    color: #fff;
+    transition: all .4s ease-in-out;
+    outline: none;
+    border: none;
+    font-weight: 600;
+    font-size: 1.4rem;
+    letter-spacing: 2px;
+    display: flex;
+    align-items: center;
+    i{
+        margin-left: 1rem;
+    }
+    &:hover{
+        background-color: #037FFF;
+    }
+}
+
+.btn-con{
+    
+}
+
+@media screen and (max-width: 803px){
+    h2{
+        font-size: 1.3rem !important;
     }
 }
