--- a/styles/style.css
+++ b/styles/style.css
@@ -161,6 +161,7 @@ button {
 
 .main-content .library-panel p {
   font-size: 1.2rem;
+  font-weight: 500;
 }
 
 .main-content .library-panel button {
